--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,26 +1,11 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+body {
+    background-color: #E7F6F2;
+    margin: 0;
 }
